--- a/Web/Areas/Hub/Views/Home/Index.cshtml
+++ b/Web/Areas/Hub/Views/Home/Index.cshtml
@@ -1,15 +1,11 @@
-﻿@{
+﻿@using Cats.Helpers
+@{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";
-    //   Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
     const string PAGE_NAME = "HubDashBoard.Index";
-
-    #region Data Activity Indicator ViewBags
-
-    //Data Activity Indicator uses ViewBag.PageName to get  Workflows configured for the page
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = "Hub Dashboard";
+    ViewBag.PageTitleDescription = "" + @ViewBag.HubName + " Hub";
     ViewBag.PageName = Cats.Services.Workflows.Constants.HubPage;
-
-    #endregion
 }
 
 @section styles
@@ -22,7 +18,7 @@
         width: 100%;
         height: 300px;
     }
-       .table td.rightAlign {
+    .table td.rightAlign {
        
         text-align: center;
        
@@ -30,235 +26,133 @@
 </style>
 
 <div ng-app="myApp">
-    <div ng-controller="HubDashboardController" class="container">
-        <div>
-            <h2>@ViewBag.HubName Hub</h2>
-            <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
-                <div class="pull-left">
-                    <h4>Stock Status</h4>
+    <div ng-controller="HubDashboardController" class="">
+
+        <div class="portlet light bordered ">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> Stock Status</span>
                 </div>
-                <div class="pull-right">
-                    <div class="btn-group">
-                        <button id="StockStatusHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-                            <i class="icon-arrow-up"></i>
-                            <i class="icon-arrow-down"></i>
-                        </button>
-                    </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
                 </div>
-            </div>
-            <div id="StockStatusContent" class="row">
-                <div>&nbsp;</div>
-                <div class="span11">
-                    <div class="portlet">
-                        <!-- /.portlet-header -->
-                        <div class="portlet-content">
-                            <div class="progress-stat">
-                                <div class="progress">
-                                    <div class="bar bar-success" style="width:{{ StockStatus.freestockPercent; }}%;">
-                                    <span>Free Stock {{ StockStatus.freestockPercent|number:2; }}%</span>
-                                    </div>
-                                    <div class="bar bar-warning" style="width:{{ StockStatus.physicalStockPercent; }}%;">
-                                        <span>Committed Stock {{ StockStatus.physicalStockPercent|number:2; }}%</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        </br>
-                        <!-- /.portlet-content -->
-                    </div>
-                    <!-- /.portlet -->
-                </div>
-                <div class="span11">
-                    <div class="portlet">
-                        <div class="portlet-header">
-                            <h3>
-                                <i class="cats-unit-pref">  Stock Status per commodity</i>
-                              
-                            </h3>
-
-                            <ul class="portlet-tools pull-right">
-                                <li>
-                                    <a class="btn btn-sm btn-default" href="@Url.Action("Index", "LogisticsStockStatus", new { Area = "Logistics" })">
-                                        Show more
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <!-- /.portlet-header -->
-                        
-                        <div class="portlet-content" ng-controller="stageController">
-                            <div id="containerPIE" class="chartWrap" draw-column-chart=""></div>
-                        </div>
-
-                        @*<div class="portlet-content">
-                            <th class="table-responsive">
-                                <table id="" class="table table-striped table-checkable">
-                                    <thead>
-                                        <tr>
-                                            <th class="hidden-xs">Commodity</th>
-                                            <th style="text-align:center">Free Stock (MT)</th>
-                                            <th style="text-align:center">Physical Stock(MT)</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="" ng-repeat="Commodity in CommodityStock">
-                                            <td class="hidden-xs">{{Commodity.CommodityName}}</td>
-                                            <td style="text-align: right; padding-right: 80px;">{{Commodity.FreeStock}}</td>
-                                            <td style="text-align: right; padding-right: 80px;">{{Commodity.PhysicalStock}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                        </div>*@
-                    </div>
-                    <!-- /.portlet-content -->
-
-                </div>
-
-                <!-- /.portlet -->
-            </div>
-        </div>
-        <div>
-
-            @Html.Partial("_DataActivityIndicator - OldTheme")
-
-
-
-
-
-
-                  
-
-
-                                <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
-                                    <div class="pull-left">
-                                        <h4>Dispatches</h4>
-                                    </div>
-                                    <div class="pull-right">
-                                        <div class="btn-group">
-                                            <button id="RequestHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-                                                <i class="icon-arrow-up"></i>
-                                                <i class="icon-arrow-down"></i>
-                                            </button>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="RequestContent" class="row">
-                                    <div>&nbsp;</div>
-                                    <div class="span11">
-                                        <div class="portlet">
-                                            <div class="portlet-header">
-                                                <h3>
-                                                    <i class=""></i>
-                                                    Recent Dispatches
-                                                </h3>
-                                                @* <ul class="portlet-tools pull-right">
-                                                    <li>
-                                                        <button class="btn btn-sm btn-default">
-                                                            Show more
-                                                        </button>
-                                                    </li>
-                                                </ul>*@
-                                            </div>
-
-                                            <!-- /.portlet-header -->
-
-                                            <div class="portlet-content">
-                            <th class="table-responsive">
-                                <table id="" class="table table-striped table-checkable">
-                                    <thead>
-                                        <tr>
-                                            <th class="hidden-xs">Bid Number</th>
-                                            <th>Requisition</th>
-                                            <th>GIN</th>
-                                            <th>FDP</th>
-                                            <th>Commodity</th>
-                                            @*<th>Planned</th>*@
-                                            <th>Dispatched (MT)</th>
-                                            <th>Transporter Name</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="" ng-repeat="dispach in Dispatches">
-                                            <td class="hidden-xs">{{dispach.BidNumber}}</td>
-                                            <td>{{dispach.RequisitionNo}}</td>
-                                            <td>{{dispach.GIN}}</td>
-                                            <td>{{dispach.FDPName}}</td>
-                                            <td>{{dispach.Commodity}}</td>
-                                            <td class="rightAlign">{{dispach.DispatchedAmount}}</td>
-                                            <td>{{dispach.Transporter}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                        </div>
-                        <!-- /.table-responsive -->
-                    </div>
-                    <!-- /.portlet-content -->
-
-                </div>
-                <!-- /.portlet -->
-            </div>
-        </div>
-        <div>
-            <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
-                <div class="pull-left">
-                    <h4>Dispatch Allocations</h4>
-                </div>
-                <div class="pull-right">
-                    <div class="btn-group">
-                        <button id="DispatchHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-                            <i class="icon-arrow-up"></i>
-                            <i class="icon-arrow-down"></i>
-                        </button>
-
-                    </div>
+                <div class="actions">
+                    <a class="btn btn-sm green" href="@Url.Action("Index", "LogisticsStockStatus", new {Area = "Logistics"})">Show more</a>
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
                 </div>
             </div>
-
-            <div id="DispatchContent" class="row">
-                <div>&nbsp;</div>
-                <div class="span11">
-                    <div class="portlet">
-                        <div class="portlet-header">
-                            <h3>
-                                <i class=""></i>
-                                Outgoing Dispatches 
-                            </h3>
+            <div class="portlet-body">
+                <div class="" id="StockStatusContent">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success" style="width: {{StockStatus.freestockPercent;}}% ; ">
+                            <span>
+                                Free Stock {{ StockStatus.freestockPercent|number:2; }}%
+                            </span>
                         </div>
-                        <!-- /.portlet-header -->
-                        <div class="portlet-content">
-                            <th class="table-responsive">
-                                <table id="" class="table table-striped table-checkable">
-                                    <thead>
-                                        <tr>
-                                            <th>BID Number</th>
-                                            <th>Requisition No</th>
-                                            <th>FDP</th>
-                                            <th>Commodity</th>
-                                            <th>Amount</th>
-                                            <th>Transporter</th>
-                                           
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="" ng-repeat="dispatchAllocation in DispatchAllocations">
-                                            <td class="hidden-xs">{{dispatchAllocation.BidNumber}}</td>
-                                            <td>{{dispatchAllocation.RequisitionNo}}</td>
-                                            <td>{{dispatchAllocation.FDPName}}</td>
-                                            <td>{{dispatchAllocation.Commodity}}</td>
-                                            <td  class="rightAlign">{{dispatchAllocation.DispatchedAmount}}</td>
-                                            <td>{{dispatchAllocation.Transporter}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        <div class="progress-bar progress-bar-warning" style="width: {{StockStatus.physicalStockPercent;}}% ; ">
+                            <span>
+                                Committed Stock {{ StockStatus.physicalStockPercent|number:2; }}%
+                            </span>
                         </div>
-                        <!-- /.table-responsive -->
                     </div>
-                    <!-- /.portlet-content -->
+                </div>
+
+                <h4>Stock Status per commodity</h4>
+                <div class="portlet-content" ng-controller="stageController">
+                    <div id="containerPIE" class="chartWrap" draw-column-chart=""></div>
                 </div>
             </div>
         </div>
+
+        @Html.Partial("_DataActivityIndicator")
+
+        <div id="RequestContent" class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> Recent Dispatches</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive">
+                    <table id="" class="table table-striped table-checkable">
+                        <thead>
+                            <tr>
+                                <th class="hidden-xs">Bid Number</th>
+                                <th>Requisition</th>
+                                <th>GIN</th>
+                                <th>FDP</th>
+                                <th>Commodity</th>
+                                @*<th>Planned</th>*@
+                                <th>Dispatched (MT)</th>
+                                <th>Transporter Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="" ng-repeat="dispach in Dispatches">
+                                <td class="hidden-xs">{{dispach.BidNumber}}</td>
+                                <td>{{dispach.RequisitionNo}}</td>
+                                <td>{{dispach.GIN}}</td>
+                                <td>{{dispach.FDPName}}</td>
+                                <td>{{dispach.Commodity}}</td>
+                                <td class="rightAlign">{{dispach.DispatchedAmount}}</td>
+                                <td>{{dispach.Transporter}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div id="DispatchContent" class="portlet light bordered bg-inverse">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> Outgoing Dispatches</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive">
+                    <table id="" class="table table-striped table-checkable">
+                        <thead>
+                            <tr>
+                                <th>BID Number</th>
+                                <th>Requisition No</th>
+                                <th>FDP</th>
+                                <th>Commodity</th>
+                                <th>Amount</th>
+                                <th>Transporter</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="" ng-repeat="dispatchAllocation in DispatchAllocations">
+                                <td class="hidden-xs">{{dispatchAllocation.BidNumber}}</td>
+                                <td>{{dispatchAllocation.RequisitionNo}}</td>
+                                <td>{{dispatchAllocation.FDPName}}</td>
+                                <td>{{dispatchAllocation.Commodity}}</td>
+                                <td class="rightAlign">{{dispatchAllocation.DispatchedAmount}}</td>
+                                <td>{{dispatchAllocation.Transporter}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -457,3 +351,8 @@
 
     <script src="~/Scripts/js/DataActivityIndictor/DataActivityIndicator.JS"></script>
 
+<style type="text/css">
+    body {
+        background-color: #364150;
+    }
+</style>
