--- a/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
@@ -31,261 +31,157 @@
     }
 </style>
 
- <div  ng-app="DataEntryIndicatorApp" ng-controller="WorkflowActController">
-    <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
-        <div class="pull-left">
-            <h4>Data Entry</h4>
+<div class="portlet light bordered bg-inverse" ng-app="DataEntryIndicatorApp" ng-controller="WorkflowActController">
+    <div class="portlet-title">
+        <div class="caption font-green-sharp">
+            <i class="icon-list font-green-sharp"></i>
+            <span class="caption-subject bold uppercase"> Data Entry Indicator</span>
         </div>
-        <div class="pull-right">
-            <div class="btn-group">
-                <button id="dataEntrytHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-arrow-up"></i>
-                    <i class="icon-arrow-down"></i>
-                </button>
+        <div class="tools">
+            <a href="#" class="collapse" data-original-title="" title=""></a>
+        </div>
+        <div class="actions">
+            <a class="btn btn-icon-only btn-default fullscreen"></a>
+        </div>
+    </div>
+    <div class="portlet-body">
+        <div class="table-responsive ">
+            <table>
+                <tr>
+                    <td>
+                        <div class="col-sm-12 ">
 
+                            <Label><small>Start Date</small></Label>
+                            <input type="text" class="form-control date-picker cats-date-pref" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+
+                        </div>
+                    </td>
+                    <td>
+                        <div class="col-sm-12 ">
+                            <Label><small>End Date</small></Label>
+                            <input type="text" class="form-control date-picker cats-date-pref" placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+
+                        </div>
+                    </td>
+                    <td>
+                        <div class="col-sm-12">
+                            <Label><small>  User</small></Label>
+
+                            <select id="User" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedUsers" title="User">
+                                <option value="@Cats.Services.Workflows.Constants.SelectOption_AllwithData">@Cats.Services.Workflows.Constants.SelectOption_AllwithData </option>
+
+                                <option ng-repeat="user in controlData.lookupUsers" value="{{user.name}}">{{user.name}}</option>
+                            </select>
+
+                        </div>
+                    </td>
+                    <td>
+                        <div class="col-sm-12">
+                            <Label><small>Activity</small></Label>
+                            <select id="Activity" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" title="Activity" ng-model="filterData.selectedActivities">
+                                <option ng-repeat="activity in controlData.lookupActivities" value="{{activity.name}}">{{activity.name}}</option>
+                            </select>
+                        </div>
+                    </td>
+                    <td>
+
+                        <div class="col-sm-12">
+                            <Label><small>Document</small></Label>
+                            <select id="Document" class="form-control" data-toggle="tooltip" data-placement="top" title="Document" ng-change="onWorkflowChange()" ng-model="filterData.selectedDocument">
+                                <option ng-repeat="document in controlData.lookupDocument" value="{{document.name}}">{{document.name}}</option>
+                            </select>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="col-sm-12 ">
+                            <Label><small> Get</small></Label>
+                            <button type="button" ng-disabled="searching || ctrlStatus.loadingDocument || ctrlStatus.loadingActivity || ctrlStatus.loadingUser" class="btn green " data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i ng-show="!searching" class="fa fa-search ">Get</i>  <i class="fa fa-cog fa-spin" ng-show="searching"></i> </button>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="dedivtable">
+
+            <div class="table-responsive" ng-if="(InvalidFilter=='VALID')">
+                <table class="detable table table-responsive table-hover table-striped table-bordered table-inverse">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>User/Activity</th>
+
+                            <th ng-repeat="activities in displayedWorkflowNames">
+                                {{ activities }}
+                            </th>
+                            <th>Total Activity per User</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="user in displayedWorkflowContent track by $index">
+                            <td scope="row">{{user.index}}</td>
+                            <td>{{user.name}}</td>
+
+                            <td ng-repeat="actCount in user.data track by $index" class="truseractivity" ng-click="openDetail(user.name,$index)"
+                                data-original-title="Click for Detail" data-container="body" data-toggle="tooltip" data-placement="bottom" title="Click to View Records">
+
+                                <a ng-click="openDetail(user.name,$index)">   {{actCount}}</a>
+
+                            </td>
+
+                            <td>
+                                {{ user.data| rowSum}}
+                            </td>
+
+                        </tr>
+
+
+                        <tr>
+                            @*<th></th>*@
+
+                            <th colspan="2">Total</th>
+
+                            <td ng-repeat="activities in displayedWorkflowNames">
+
+                                {{calcColumnTotal(activities)}}
+
+
+                            </td>
+
+
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="table-responsive" ng-if="(InvalidFilter=='INVALID')">
+                <div class="alert alert-danger"><Strong>Your Filter Entry is not valid, Please fill the required fields and try again.</Strong></div>
+            </div>
+
+            <div class="table-responsive" ng-if="(InvalidFilter=='DEFAULT')">
+
+            </div>
+
+        </div>
+
+        <div class="dedivgraph">
+            <div class="box-body table-responsive" style="display: block;">
+                <div id="containerGraph" class="graphWrap"></div>
             </div>
         </div>
     </div>
-    <div   class="row">
-        <div>&nbsp;</div>
-        <div class="span12">
-            <div class="portlet">
-                <div class="portlet-header">
-                    <h3>
-                        <i class=""></i>
-                        Data Entry Indicator
-                    </h3>
+</div>
 
-                </div>
-
-                <!-- /.portlet-header -->
-
-                <div class="portlet-content">
-             
-                    
-                    @*<div class="row table-responsive" style="min-height: 100px;">*@
-
-                    <div class="col-sm-12  table-responsive ">
-                        <table>
-                            <tr>
-                                <td>
-                                    <div class="col-sm-2 ">
-
-                                    <Label><small>Start Date</small></Label>
-                                    <input type="text" class="form-control" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
-                                
-                                </div>
-                                </td>
-                               
-                                <td>
-                                    <div  class="col-sm-2 ">
-                                    <Label><small>End Date</small></Label>
-                                    <input type="text" class="form-control " placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
-
-                              
-
-                                </div>  </td>
-                                <td>
-                                    <div class="col-sm-2">
-                                        <Label><small>  User</small></Label>
-
-                                        <select id="User" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedUsers" title="User">
-                                            <option value="@Cats.Services.Workflows.Constants.SelectOption_AllwithData">@Cats.Services.Workflows.Constants.SelectOption_AllwithData </option>
-
-
-
-                                            <option ng-repeat="user in controlData.lookupUsers" value="{{user.name}}">{{user.name}}</option>
-                                        </select>
-
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="col-sm-2">
-
-
-                                        <Label><small>Activity</small></Label>
-                                        <select id="Activity" multiple="multiple" class="form-control" data-toggle="tooltip" data-placement="top" title="Activity" ng-model="filterData.selectedActivities">
-                                            <option ng-repeat="activity in controlData.lookupActivities" value="{{activity.name}}">{{activity.name}}</option>
-                                        </select>
-
-                                    </div>
-                                </td>
-                                <td>
-
-                                    <div class="col-sm-2">
-                                        <Label><small>Document</small></Label>
-                                        <select id="Document" class="form-control" data-toggle="tooltip" data-placement="top" title="Document" ng-change="onWorkflowChange()" ng-model="filterData.selectedDocument">
-                                        
-                                                <option ng-repeat="document in controlData.lookupDocument" value="{{document.name}}">{{document.name}}</option>
-
-                                        </select>
-                                    </div>
-                                </td>
-                                <td>
-                                <div class="col-sm-2 ">
-                                    <Label><small> Get</small></Label>
-                                    <button type="button" ng-disabled="searching || ctrlStatus.loadingDocument || ctrlStatus.loadingActivity || ctrlStatus.loadingUser" class="btn green " data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i ng-show="!searching" class="fa fa-search ">Get</i>  <i class="fa fa-cog fa-spin" ng-show="searching"></i> </button>
-                                </div>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                            @*</div>*@
-
-
-
-                    <div class="dedivtable col-sm-12">
-
-                        <div class="table-responsive" ng-if="(InvalidFilter=='VALID')">
-
-
-
-                            <table class="detable table table-responsive table-hover table-striped table-bordered table-inverse">
-                                <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>User/Activity</th>
-
-                                        <th ng-repeat="activities in displayedWorkflowNames">
-                                            {{ activities }}
-                                        </th>
-                                        <th>Total Activity per User</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="user in displayedWorkflowContent track by $index">
-                                        <td scope="row">{{user.index}}</td>
-                                        <td>{{user.name}}</td>
-
-                                        <td ng-repeat="actCount in user.data track by $index" class="truseractivity" ng-click="openDetail(user.name,$index)"
-                                            data-original-title="Click for Detail" data-container="body" data-toggle="tooltip" data-placement="bottom" title="Click to View Records">
-
-                                            <a ng-click="openDetail(user.name,$index)">   {{actCount}}</a>
-
-                                        </td>
-
-                                        <td>
-                                            {{ user.data| rowSum}}
-                                        </td>
-
-                                    </tr>
-
-
-                                    <tr>
-                                        @*<th></th>*@
-
-                                        <th colspan="2">Total</th>
-
-                                        <td ng-repeat="activities in displayedWorkflowNames">
-
-                                            {{calcColumnTotal(activities)}}
-
-
-                                        </td>
-
-
-                                    </tr>
-
-                                </tbody>
-                            </table>
-
-                        </div>
-
-                        <div class="table-responsive" ng-if="(InvalidFilter=='INVALID')">
-                            <div class="alert alert-danger"><Strong>Your Filter Entry is not valid, Please fill the required fields and try again.</Strong></div>
-                        </div>
-
-
-                        <div class="table-responsive" ng-if="(InvalidFilter=='DEFAULT')">
-
-                        </div>
-                    </div>
-
-
-                    <div class="dedivgraph col-sm-12">
-                        <div class="box-body table-responsive" style="display: block;" >
-                            <div id="containerGraph" class="graphWrap"></div>
-                        </div>
-                    </div>
-                            </div>
-
-
-
-
-                        </div>
-                    </div>
-        </div>
-    </div>
-
-
-
-
-
-
-               
-        <script>
+<script>
             String.prototype.toCamel = function () {
                 return this.replace(/(\-[a-z])/g, function ($1) { return $.toUpperCase().replace('-', ''); });
             };
-            //$('#User').multiselect({
+            
+</script>
 
-            //    templates: { // Use the Awesome Bootstrap Checkbox structure
-
-            //        li: '<li><div class="checkbox"><label></label></div></li>'
-            //    }
-
-            //});
-            //$('#Activity').multiselect({
-
-            //    templates: { // Use the Awesome Bootstrap Checkbox structure
-
-            //        li: '<li><div class="checkbox"><label></label></div></li>'
-            //    }
-
-            //});
-
-            //$('#Document').multiselect({
-
-            //    templates: { // Use the Awesome Bootstrap Checkbox structure
-
-            //        li: '<li><div class="checkbox"><label></label></div></li>'
-            //    }
-
-            //});
-            //$('.multiselect-container div.checkbox').each(function (index) {
-
-            //    var id = 'multiselect-' + index,
-
-            //        $input = $(this).find('input');
-
-            //    // Associate the label and the input
-
-            //    $(this).find('label').attr('for', id);
-
-            //    $input.attr('id', id);
-
-            //    // Remove the input from the label wrapper
-
-            //    $input.detach();
-
-            //    // Place the input back in before the label
-
-            //    $input.prependTo($(this));
-
-            //    $(this).click(function (e) {
-
-            //        // Prevents the click from bubbling up and hiding the dropdown
-
-            //        e.stopPropagation();
-
-            //    });
-
-
-            //});
-        </script>
-
-        <script>
+<script>
 
             var urlGetAllTeamUsers = "@Url.Action("GetAllTeamUsers", "WorkflowManager", new { Area = "WorkflowManager" })" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
             var urlGetAllWorkflows = "@Url.Action("GetAllWorkflows", "WorkflowManager", new { Area = "WorkflowManager"})" + "?pageName=" + "@Html.Raw(ViewBag.PageName)";
@@ -293,6 +189,6 @@
             var urlGetAllStateTemplate_ = "@Url.Action("GetAllStateTemplate", "WorkflowManager", new { Area = "WorkflowManager"})" + "?workflowName=";
             var urlGetDataEntryStat = "@Url.Action("GetDataEntryStat", "WorkflowManager", new { Area = "WorkflowManager"})";
 
-        </script>
-    </div>
+</script>
+
 
